--- a/app/Bar/Bar/presentation/BillDialog.xaml
+++ b/app/Bar/Bar/presentation/BillDialog.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MobiCarta - Factura" Height="600" Width="800" Icon="/Bar;component/Images/ico.png" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" MinWidth="800" MinHeight="600">
-    <Grid Margin="5" Background="Azure">
+    <Grid Margin="5" Background="Gainsboro">
         <Grid.RowDefinitions>
             <RowDefinition Height="0.3*" />
             <RowDefinition Height="0.38*" />
@@ -19,7 +19,7 @@
             </Grid.ColumnDefinitions>
             <Button Content="Cancelar" Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5" Name="btnCancel" VerticalAlignment="Stretch" Width="Auto" Click="btnCancel_Click" FontWeight="Bold" />
             <Button Content="PAGADA" Grid.Column="3" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5" Name="btnCharge" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" Click="btnCharge_Click" />
-            <Button Content="Imprimir" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5,60,5" Name="btnPrint" VerticalAlignment="Stretch" Width="Auto" Click="btnPrint_Click" FontWeight="Bold" />
+            <Button Content="Imprimir" Height="Auto" HorizontalAlignment="Stretch" Margin="10,5,60,5" Name="btnPrint" VerticalAlignment="Stretch" Width="Auto" Click="btnPrint_Click" FontWeight="Bold" Visibility="Hidden" />
         </Grid>
         <Grid Grid.Row="3" Height="Auto" HorizontalAlignment="Stretch" Margin="5,2" Name="grid3" VerticalAlignment="Stretch" Width="Auto" Background="{x:Null}">
             <Grid.ColumnDefinitions>
@@ -36,10 +36,10 @@
                 <RowDefinition Height="0.5*" />
                 <RowDefinition Height="0.5*" />
             </Grid.RowDefinitions>
-            <Label Content="Base imponible" Height="Auto" HorizontalAlignment="Stretch" Name="label1" VerticalAlignment="Stretch" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
-            <Label Content="IVA" Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Name="label2" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
-            <Label Content="Cuota" Grid.Column="4" Height="Auto" HorizontalAlignment="Stretch" Name="label3" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
-            <Label Content="TOTAL" Grid.Column="6" Height="Auto" HorizontalAlignment="Stretch" Margin="10,0" Name="label4" VerticalAlignment="Stretch" Width="Auto" FontSize="12" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Gray" Grid.ColumnSpan="2" />
+            <Label Content="Base imponible:" Height="Auto" HorizontalAlignment="Stretch" Name="label1" VerticalAlignment="Stretch" FontSize="14" FontWeight="Normal" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
+            <Label Content="IVA:" Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Name="label2" VerticalAlignment="Stretch" Width="Auto" FontSize="14" FontWeight="Normal" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
+            <Label Content="Cuota:" Grid.Column="4" Height="Auto" HorizontalAlignment="Stretch" Name="label3" VerticalAlignment="Stretch" Width="Auto" FontSize="14" FontWeight="Normal" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Foreground="Black" Grid.ColumnSpan="2" />
+            <Label Content="TOTAL" Grid.Column="6" Height="Auto" HorizontalAlignment="Stretch" Margin="10,0" Name="label4" VerticalAlignment="Stretch" Width="Auto" FontSize="14" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Gray" Grid.ColumnSpan="2" />
             <TextBox Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbTaxBase" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" Grid.ColumnSpan="1" />
             <TextBox Grid.Column="2" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbIVA" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" Grid.ColumnSpan="1" />
             <TextBox Grid.Column="4" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbQuote" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" FontWeight="Bold" Grid.ColumnSpan="1" />
@@ -67,10 +67,10 @@
                     <RowDefinition Height="0.25*" />
                     <RowDefinition Height="0.25*" />
                 </Grid.RowDefinitions>
-                <Label Height="Auto" HorizontalAlignment="Stretch" Name="lblBill" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontWeight="Normal" Grid.ColumnSpan="1" Content="Factura:" Foreground="Black" />
-                <Label Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Name="lblSerial" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Serie:" Foreground="Black" />
-                <Label Grid.Row="2" Height="Auto" HorizontalAlignment="Stretch" Name="lblTable" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Mesa:" Foreground="Black" />
-                <Label Grid.Row="3" Height="Auto" HorizontalAlignment="Stretch" Name="lblDate" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Fecha:" Foreground="Black" />
+                <Label Height="Auto" HorizontalAlignment="Stretch" Name="lblBill" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontWeight="Normal" Grid.ColumnSpan="1" Content="Factura:" Foreground="Black" FontSize="14" />
+                <Label Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Name="lblSerial" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Serie:" Foreground="Black" FontSize="14" />
+                <Label Grid.Row="2" Height="Auto" HorizontalAlignment="Stretch" Name="lblTable" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Mesa:" Foreground="Black" FontSize="14" />
+                <Label Grid.Row="3" Height="Auto" HorizontalAlignment="Stretch" Name="lblDate" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Fecha:" Foreground="Black" FontSize="14" />
                 <TextBox Grid.Column="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0,5,5,5" Name="txtbBill" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" />
                 <TextBox Grid.Column="1" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0,5,5,5" Name="txtbSerial" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" />
                 <TextBox Grid.Column="1" Grid.Row="2" Height="Auto" HorizontalAlignment="Stretch" Margin="0,5,5,5" Name="txtbTable" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" />
@@ -88,19 +88,19 @@
                     <RowDefinition Height="0.2*" />
                     <RowDefinition Height="0.2*" />
                 </Grid.RowDefinitions>
-                <Label Height="Auto" HorizontalAlignment="Stretch" Name="lblDNI" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="DNI:" Foreground="Black" />
-                <Label Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Name="lblName" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Nombre:" Foreground="Black" />
-                <Label Grid.Row="2" Height="Auto" HorizontalAlignment="Stretch" Name="lblAddress" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Dirección:" Foreground="Black" />
-                <Label Grid.Row="3" Height="Auto" HorizontalAlignment="Stretch" Name="lblTown" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Localidad:" Foreground="Black" />
-                <Label Grid.Row="4" Height="Auto" HorizontalAlignment="Stretch" Name="lblState" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Provincia:" Foreground="Black" />
-                <TextBox Grid.Column="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbDNI" VerticalAlignment="Stretch" Width="Auto" Text="" FontWeight="Bold" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" IsReadOnly="True" />
-                <TextBox Grid.Column="1" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbName" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" IsReadOnly="True" />
-                <TextBox Grid.Column="1" Grid.Row="2" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbAddress" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" IsReadOnly="True" />
-                <TextBox Grid.Column="1" Grid.Row="3" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbTown" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" IsReadOnly="True" />
-                <TextBox Grid.Column="1" Grid.Row="4" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbState" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" IsReadOnly="True" />
+                <Label Height="Auto" HorizontalAlignment="Stretch" Name="lblDNI" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="DNI:" Foreground="Black" FontSize="14" />
+                <Label Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Name="lblName" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Nombre:" Foreground="Black" FontSize="14" />
+                <Label Grid.Row="2" Height="Auto" HorizontalAlignment="Stretch" Name="lblAddress" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Dirección:" Foreground="Black" FontSize="14" />
+                <Label Grid.Row="3" Height="Auto" HorizontalAlignment="Stretch" Name="lblTown" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Localidad:" Foreground="Black" FontSize="14" />
+                <Label Grid.Row="4" Height="Auto" HorizontalAlignment="Stretch" Name="lblState" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" Grid.ColumnSpan="1" Content="Provincia:" Foreground="Black" FontSize="14" />
+                <TextBox Grid.Column="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbDNI" VerticalAlignment="Stretch" Width="Auto" Text="" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" />
+                <TextBox Grid.Column="1" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbName" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" />
+                <TextBox Grid.Column="1" Grid.Row="2" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbAddress" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" />
+                <TextBox Grid.Column="1" Grid.Row="3" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbTown" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" />
+                <TextBox Grid.Column="1" Grid.Row="4" Height="Auto" HorizontalAlignment="Stretch" Margin="0,3,5,3" Name="txtbState" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" IsReadOnly="True" />
             </Grid>
         </Grid>
-        <ListView Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="5,2,0,0" Name="listVBill" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold">
+        <ListView Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="5,2,0,0" Name="listVBill" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" Background="Ivory" HorizontalContentAlignment="Center" FontSize="14">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Nº" DisplayMemberBinding="{Binding Path=Id}" Width="Auto" />
@@ -123,8 +123,8 @@
                 <ColumnDefinition Width="0.2*" />
                 <ColumnDefinition Width="0.05*" />
             </Grid.ColumnDefinitions>
-            <Label Content="Subtotal" Grid.Column="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label5" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontWeight="Bold" />
-            <Label Content="Descuento" Grid.Column="1" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label6" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" />
+            <Label Content="Subtotal:" Grid.Column="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label5" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Right" VerticalContentAlignment="Center" FontWeight="Normal" FontSize="14" />
+            <Label Content="Descuento:" Grid.Column="1" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label6" VerticalAlignment="Stretch" Width="Auto" FontWeight="Normal" VerticalContentAlignment="Center" HorizontalContentAlignment="Right" FontSize="14" />
             <TextBox Grid.Column="2" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbSubtotal" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" Grid.ColumnSpan="1" />
             <TextBox Grid.Column="2" Grid.Row="1" Height="Auto" HorizontalAlignment="Stretch" Margin="10,2,0,2" Name="txtbDiscount" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontWeight="Bold" Grid.ColumnSpan="1" />
             <Label Content="€" Grid.Column="3" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label7" VerticalAlignment="Stretch" Width="Auto" FontWeight="Bold" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" />
