--- a/app/Bar/Bar/presentation/EditProductsWin.xaml
+++ b/app/Bar/Bar/presentation/EditProductsWin.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MobiCarta - Lista de productos" Height="600" Width="800" Icon="/Bar;component/Images/ico.png" WindowStartupLocation="CenterScreen">
-    <Grid Background="LightGray">
+    <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.12*" />
             <RowDefinition Height="0.83*" />
@@ -10,11 +10,11 @@
         </Grid.RowDefinitions>
         <ToolBar Height="Auto" VerticalAlignment="Stretch" Grid.Row="0" Grid.RowSpan="1" MinHeight="60" MaxHeight="Infinity">
             <StackPanel Height="Auto" Orientation="Horizontal" Width="Auto" MaxHeight="Infinity" MinHeight="60">
-                <Button Background="#00000000" Cursor="Hand" Foreground="#E6FFFFFF" Height="Auto" Margin="5,5,5,5" Name="btnLoadPL" ToolTip="Cargar lista de productos" Width="Auto" Click="btnLoadPL_Click">
-                    <Image Name="imgLoad" ToolTip="Cargar lista de productos" Source="/Bar;component/Images/loadDB22.png" />
+                <Button Background="#00000000" Cursor="Hand" Foreground="#E6FFFFFF" Height="Auto" Margin="5,5,5,5" Name="btnLoadPL" ToolTip="Cargar lista de categorías y productos" Width="Auto" Click="btnLoadPL_Click">
+                    <Image Name="imgLoad" ToolTip="Cargar lista de categorías y productos" Source="/Bar;component/Images/loadCat.png" />
                 </Button>
-                <Button Background="#00000000" BorderBrush="#00000000" Cursor="Hand" Height="Auto" Margin="5,5,5,5" Name="btnSavePL" ToolTip="Guardar lista de productos" Width="Auto" Click="btnSavePL_Click">
-                    <Image Name="imgSave" ToolTip="Guardar lista de productos" Source="/Bar;component/Images/saveDB22.png" />
+                <Button Background="#00000000" BorderBrush="#00000000" Cursor="Hand" Height="Auto" Margin="5,5,5,5" Name="btnSavePL" ToolTip="Guardar lista de categorías y productos" Width="Auto" Click="btnSavePL_Click" IsEnabled="False">
+                    <Image Name="imgSave" ToolTip="Guardar lista de categorías y productos" Source="/Bar;component/Images/saveCat.png" />
                 </Button>
             </StackPanel>
         </ToolBar>
@@ -31,13 +31,13 @@
                 </Grid.RowDefinitions>
                 <StackPanel Height="Auto" HorizontalAlignment="Stretch" Name="stackPanelCat" VerticalAlignment="Stretch" Width="Auto" Orientation="Horizontal" Grid.Row="2" MaxHeight="Infinity" Background="MediumBlue">
                     <Button Background="{x:Null}" Cursor="Hand" Foreground="{x:Null}" Height="Auto" Margin="5,5,5,5" Name="btnAddCat" ToolTip="Añadir categoría" Width="Auto" Click="btnAddCat_Click" BorderBrush="DarkGoldenrod">
-                        <Image Name="imgAddCat" ToolTip="Añadir categoría" Source="/Bar;component/Images/addC2.png" />
+                        <Image Name="imgAddCat" ToolTip="Añadir categoría" Source="/Bar;component/Images/addC.png" />
                     </Button>
                     <Button Background="#00000000" BorderBrush="DarkGoldenrod" Cursor="Hand" Height="Auto" Margin="5,5,5,5" Name="btnRemoveCat" ToolTip="Eliminar categoría" Width="Auto" Click="btnRemoveCat_Click">
-                        <Image Name="imgRemoveCat" ToolTip="Eliminar categoría" Source="/Bar;component/Images/removeC2.png" />
+                        <Image Name="imgRemoveCat" ToolTip="Eliminar categoría" Source="/Bar;component/Images/removeC.png" />
                     </Button>
                     <Button Background="#00000000" BorderBrush="DarkGoldenrod" Cursor="Hand" Height="Auto" Margin="5,5,5,5" Name="btnEditCat" ToolTip="Editar categoría" Width="Auto" Click="btnEditCat_Click">
-                        <Image Name="imgEditCat" ToolTip="Editar categoría" Source="/Bar;component/Images/editC2.png" />
+                        <Image Name="imgEditCat" ToolTip="Editar categoría" Source="/Bar;component/Images/editC.png" />
                     </Button>
                 </StackPanel>
                 <Label Content="Categorías" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label1" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="24" FontWeight="Bold" Background="MediumBlue" Foreground="White" />
@@ -57,13 +57,13 @@
                 </Grid.RowDefinitions>
                 <StackPanel Height="Auto" HorizontalAlignment="Stretch" Name="stackPanelPro" VerticalAlignment="Stretch" Width="Auto" Orientation="Horizontal" Grid.Row="2" MaxHeight="Infinity" Background="Red">
                     <Button Background="{x:Null}" Cursor="Hand" Foreground="{x:Null}" Height="Auto" Margin="5,5,5,5" Name="btnAddPro" ToolTip="Añadir producto" Width="Auto" Click="btnAddPro_Click" BorderBrush="DarkGoldenrod">
-                        <Image Name="imgAddPro" ToolTip="Añadir producto" Source="/Bar;component/Images/addP2.png" />
+                        <Image Name="imgAddPro" ToolTip="Añadir producto" Source="/Bar;component/Images/addP.png" />
                     </Button>
                     <Button Background="#00000000" BorderBrush="DarkGoldenrod" Cursor="Hand" Height="Auto" Margin="5,5,5,5" Name="btnRemovePro" ToolTip="Eliminar producto" Width="Auto" Click="btnRemovePro_Click">
-                        <Image Name="imgRemovePro" ToolTip="Eliminar producto" Source="/Bar;component/Images/removeP2.png" />
+                        <Image Name="imgRemovePro" ToolTip="Eliminar producto" Source="/Bar;component/Images/removeP.png" />
                     </Button>
                     <Button Background="#00000000" BorderBrush="DarkGoldenrod" Cursor="Hand" Height="Auto" Margin="5,5,5,5" Name="btnEditPro" ToolTip="Editar producto" Width="Auto" Click="btnEditPro_Click">
-                        <Image Name="imgEditPro" ToolTip="Editar producto" Source="/Bar;component/Images/editP2.png" />
+                        <Image Name="imgEditPro" ToolTip="Editar producto" Source="/Bar;component/Images/editP.png" />
                     </Button>
                 </StackPanel>
                 <Label Content="Productos" Height="Auto" HorizontalAlignment="Stretch" Margin="0" Name="label2" VerticalAlignment="Stretch" Width="Auto" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="24" FontWeight="Bold" Background="Red" Foreground="White" />
@@ -74,11 +74,17 @@
                             <GridViewColumn Header="Nombre" DisplayMemberBinding="{Binding Path=PName}" Width="Auto" />
                             <GridViewColumn Header="Precio(€)" DisplayMemberBinding="{Binding Path=Price}" Width="Auto" />
                             <GridViewColumn Header="UPDesc." DisplayMemberBinding="{Binding Path=DiscountedUnit}" Width="Auto" />
-                            <GridViewColumn Header="Desc.(%)" DisplayMemberBinding="{Binding Path=Discount}" Width="Auto" />                            
+                            <GridViewColumn Header="Desc.(%)" DisplayMemberBinding="{Binding Path=Discount}" Width="Auto" />
                         </GridView>
                     </ListView.View>
                 </ListView>
             </Grid>
         </Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
+                <GradientStop Color="SkyBlue" Offset="0" />
+                <GradientStop Color="White" Offset="1" />
+            </LinearGradientBrush>
+        </Grid.Background>
     </Grid>
 </Window>
