--- a/app/Bar/Bar/presentation/InitWin.xaml
+++ b/app/Bar/Bar/presentation/InitWin.xaml
@@ -54,7 +54,7 @@
                         </LinearGradientBrush>
                     </Button.Background>
                 </Button>
-                <Button Margin="20,0,20,-313" Height="100" Content="Estadísticas" Grid.Row="2" VerticalAlignment="Bottom" FontFamily="Trebuchet MS" FontSize="24" Opacity="0.8" FontWeight="Normal" x:Name="btnStatistics" BorderThickness="5,5,5,5" HorizontalAlignment="Stretch">
+                <Button Margin="20,0,20,-313" Height="100" Content="Histórico de facturas y pedidos" Grid.Row="2" VerticalAlignment="Bottom" FontFamily="Trebuchet MS" FontSize="20" Opacity="0.8" FontWeight="Normal" x:Name="btnStatistics" BorderThickness="5,5,5,5" HorizontalAlignment="Stretch" Click="btnStatistics_Click">
                     <Button.Background>
                         <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
                             <GradientStop Color="#FFF3F3F3" Offset="0"/>
